--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         console.log("Starting fetch to /predict...");
 
-        try {
+  
           const response = await fetch('https://4b5mtwg9bk.execute-api.eu-north-1.amazonaws.com/predict', {
             method: 'POST',
             headers: {
@@ -65,25 +65,13 @@
           console.log("Fetch completed. Status:", response.status);
 
           if (!response.ok) {
-            const text = await response.text(); // helpful for debugging non-JSON errors
+            const text = await response.text();
             throw new Error(`Fetch failed. Status: ${response.status}, Body: ${text}`);
           }
 
-          const data = await response.json();
-          console.log("Prediction response:", data);
+          const result = await response.json();
+          console.log("Prediction response:", result);
 
-          // your image logic or display code here
-
-        } catch (err) {
-          console.error("Error during fetch:", err);
-        }
-
-
-
-        console.log("Response status:")
-        console.log(response);
-
-        const result = await response.json();
         document.getElementById('result').innerText = "Prediction: " + JSON.stringify(result);
       };
     }
