--- a/index.html
+++ b/index.html
@@ -5,82 +5,20 @@
 </head>
 <body>
   <h2>Upload Chest X-ray</h2>
+  
+  <!-- the accept variable will ensure only the images files are selected and not any other files type -->
   <input type="file" id="imageInput" accept="image/*" />
+
+  <!-- The button will trigger the uploadImage function when clicked which is in a separate file -->
   <button onclick="uploadImage()">Predict</button>
+
+  <!-- Shows whether the person has pneumonia or not -->
   <p id="result"></p>
 
-  <script>
-    async function uploadImage() {
-      const input = document.getElementById('imageInput');
-      if (!input.files[0]) {
-        alert("Please upload an image first.");
-        return;
-      }
+  <!-- Shows the user image that was uploaded -->
+  <div id="preview"></div>
 
-      const imgFile = input.files[0];
-      const img = new Image();
-      img.src = URL.createObjectURL(imgFile);
-
-      img.onload = async () => {
-        const canvas = document.createElement('canvas');
-        canvas.width = 224;
-        canvas.height = 224;
-        const ctx = canvas.getContext('2d');
-        ctx.drawImage(img, 0, 0, 224, 224);
-
-        const imageData = ctx.getImageData(0, 0, 224, 224).data;
-        const pixels = [];
-
-        for (let i = 0; i < imageData.length; i += 4) {
-          pixels.push(imageData[i] / 255);     // R
-          pixels.push(imageData[i + 1] / 255); // G
-          pixels.push(imageData[i + 2] / 255); // B
-        }
-
-        const reshaped = [];
-        for (let y = 0; y < 224; y++) {
-          const row = [];
-          for (let x = 0; x < 224; x++) {
-            const idx = (y * 224 + x) * 3;
-            row.push([
-              pixels[idx], pixels[idx + 1], pixels[idx + 2]
-            ]);
-          }
-          reshaped.push(row);
-        }
-
-        const body = JSON.stringify({ image: [reshaped] });
-
-        console.log("Starting fetch to /predict...");
-
-  
-          const response = await fetch('https://4b5mtwg9bk.execute-api.eu-north-1.amazonaws.com/predict', {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json'
-            },
-            body: body
-          });
-
-          console.log("Fetch completed. Status:", response.status);
-
-          if (!response.ok) {
-            const text = await response.text(); // helpful for debugging non-JSON errors
-            throw new Error(`Fetch failed. Status: ${response.status}, Body: ${text}`);
-          }
-
-          const data = await response.json();
-          console.log("Prediction response:", data);
-
-
-
-        console.log("Response status:")
-        console.log(response);
-
-        const result = await response.json();
-        document.getElementById('result').innerText = "Prediction: " + JSON.stringify(result);
-      };
-    }
-  </script>
+  <!-- JS is handled in a separate file -->
+  <script src="script.js"></script>
 </body>
 </html>
